--- a/apps/dev/investager-values.yaml
+++ b/apps/dev/investager-values.yaml
@@ -1,8 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-    name: investager
-    namespace: investager
+    name: investager-ui
 spec:
     chart:
         spec:
