formatting for the win

--- a/charts/common/frontend/templates/deployment.yaml
+++ b/charts/common/frontend/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
     creationTimestamp: null
     labels:
         app: react-webapp
-    name: investager-ui
+    name: '{{ .Values.application.name }}'
 spec:
     replicas: '{{ .Values.replicaCount }}'
     selector:
@@ -17,19 +17,9 @@ spec:
                 app: react-webapp
         spec:
             containers:
-                - image:
-                      {
-                          {
-                              .Values.image.repository,
-                          },
-                      }
+                - image: '{{ .Values.image.repository }}'
                   name: webapp
-                  imagePullPolicy:
-                      {
-                          {
-                              .Values.image.pullPolicy,
-                          },
-                      }
+                  imagePullPolicy: '{{ .Values.image.pullPolicy }}'
                   resources: {}
                   ports:
                       - containerPort: 3001
