--- a/clusters/dev/apps.yaml
+++ b/clusters/dev/apps.yaml
@@ -8,7 +8,7 @@ spec:
     sourceRef:
         kind: GitRepository
         name: flux-system
-    path: ./apps/dev2
+    path: ./apps/dev
     prune: true
     wait: true
     timeout: 5m0s
