--- a/charts/common/frontend/templates/service.yaml
+++ b/charts/common/frontend/templates/service.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
     ports:
         - port: 3001
+          targetPort: 3001
           protocol: TCP
     selector:
         app: {{ .Values.application.name }}
