--- a/charts/common/frontend/templates/ingress.yaml
+++ b/charts/common/frontend/templates/ingress.yaml
@@ -6,8 +6,7 @@ metadata:
         traefik.ingress.kubernetes.io/router.entrypoints: web # useless
 spec:
     rules:
-        - host: localhost
-          http:
+        - http:
               paths:
                   - path: /ui
                     pathType: Prefix
@@ -15,4 +14,4 @@ spec:
                         service:
                             name: {{ .Values.application.name }}
                             port:
-                                number: 80
+                                number: 3001
