--- a/charts/common/frontend/templates/ingress.yaml
+++ b/charts/common/frontend/templates/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
     name: {{ .Values.application.name }}
+    namespace: {{ .Values.namespace }}
     annotations:
         traefik.ingress.kubernetes.io/router.entrypoints: web # useless
 spec:
