--- a/charts/common/frontend/templates/service.yaml
+++ b/charts/common/frontend/templates/service.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
     name: {{ .Values.application.name }}
-    labels:
-        run: {{ .Values.application.name }}
+    namespace: {{ .Values.namespace }}
 spec:
-    ports:
-        - port: 3001
-          targetPort: 3001
-          protocol: TCP
     selector:
-        app: {{ .Values.application.name }}
-    type: LoadBalancer
+        name: {{ .Values.application.name }}
+    ports:
+        - protocol: TCP
+          port: 80
+          targetPort: 3001
