--- a/charts/common/express/templates/ingress.yaml
+++ b/charts/common/express/templates/ingress.yaml
@@ -9,7 +9,7 @@ spec:
     rules:
         - http:
               paths:
-                  - path: /ui
+                  - path: {{ .Values.application.prefix }}
                     pathType: Prefix
                     backend:
                         service:
