--- a/charts/investager/values.yaml
+++ b/charts/investager/values.yaml
@@ -1,11 +1,17 @@
-# api-image:
-#     repository: ghcr.io/tiberiu-matei/investager/api:sha-e200836
-#     pullPolicy: IfNotPresent
-
+api:
+    namespace: investager
+    replicaCount: 3
+    application:
+        prefix: /api
+        name: investager-api
+    image:
+        repository: ghcr.io/tiberiu-matei/investager/api:sha-e200836
+        pullPolicy: IfNotPresent
 ui:
     namespace: investager
     replicaCount: 3
     application:
+        prefix: /ui
         name: investager-ui
     image:
         repository: ghcr.io/tiberiu-matei/investager/ui:sha-e200836
