--- a/charts/common/frontend/templates/deployment.yaml
+++ b/charts/common/frontend/templates/deployment.yaml
@@ -4,21 +4,21 @@ metadata:
     namespace: {{ .Values.namespace }}
     name: {{ .Values.application.name }}
     labels:
-        app: express-app
+        app: web-app
 spec:
     replicas: {{ .Values.replicaCount }}
     selector:
         matchLabels:
-            app: express-app
+            app: web-app
     template:
         metadata:
             labels:
-                app: express-app
+                app: web-app
                 name: {{ .Values.application.name }}
         spec:
             containers:
                 - image: {{ .Values.image.repository }}
-                  name: express
+                  name: app
                   imagePullPolicy: {{ .Values.image.pullPolicy }}
                   ports:
                       - containerPort: 3001
