--- a/charts/investager/Chart.yaml
+++ b/charts/investager/Chart.yaml
@@ -1,15 +1,15 @@
 dependencies:
     - alias: api
-      name: express
-      version: '0.1.5'
-      repository: file://../common/express
+      name: investager-api
+      version: '0.1.6'
+      repository: file://../common/frontend
     - alias: ui
-      name: next
-      version: '0.1.5'
-      repository: file://../common/next
+      name: investager-ui
+      version: '0.1.6'
+      repository: file://../common/frontend
 apiVersion: v2
 name: investager
 description: Investager Helm chart
 type: application
-version: 0.1.5
-appVersion: '0.1.5'
+version: 0.1.6
+appVersion: '0.1.6'
