--- a/charts/common/frontend/templates/ingress-route.yaml
+++ b/charts/common/frontend/templates/ingress-route.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
     name: {{ .Values.application.name }}
