--- a/apps/dev/kustomization.yaml
+++ b/apps/dev/kustomization.yaml
@@ -5,3 +5,11 @@ resources:
     - ../base/investager
 patchesStrategicMerge:
     - investager-values.yaml
+---
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+namespace: monitoring
+resources:
+    - ../base/monitoring
+patchesStrategicMerge:
+    - monitoring-values.yaml
