--- a/apps/dev/monitoring-values.yaml
+++ b/apps/dev/monitoring-values.yaml
@@ -1,9 +1,9 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-    name: investager
-    namespace: investager
+    name: monitoring
+    namespace: monitoring
 spec:
     chart:
         spec:
-            version: '>=0.0.1'
+            version: ">=0.0.1"
