--- a/charts/common/frontend/templates/strip-prefix.yaml
+++ b/charts/common/frontend/templates/strip-prefix.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
     name: {{ .Values.application.name }}-strip
+    namespace: {{ .Values.namespace }}
 spec:
     stripPrefix:
         prefixes:
