--- a/charts/investager/Chart.yaml
+++ b/charts/investager/Chart.yaml
@@ -1,15 +1,15 @@
 dependencies:
     - alias: api
       name: investager-api
-      version: '0.1.7'
+      version: "0.1.8"
       repository: file://../common/frontend
     - alias: ui
       name: investager-ui
-      version: '0.1.7'
+      version: "0.1.8"
       repository: file://../common/frontend
 apiVersion: v2
 name: investager
 description: Investager Helm chart
 type: application
-version: 0.1.7
-appVersion: '0.1.7'
+version: 0.1.8
+appVersion: "0.1.8"
