--- a/charts/common/monitoring/templates/ingress-route.yaml
+++ b/charts/common/monitoring/templates/ingress-route.yaml
@@ -7,7 +7,7 @@ spec:
     entryPoints:
         - web
     routes:
-        - match: PathPrefix('{{ .Values.application.prefix }}')
+        - match: PathPrefix(`/grafana`)
           kind: Rule
           middlewares:
               - name: grafana-strip
