--- a/charts/common/frontend/templates/ingress-route.yaml
+++ b/charts/common/frontend/templates/ingress-route.yaml
@@ -7,7 +7,7 @@ spec:
     entryPoints:
         - web
     routes:
-        - match: PathPrefix('{{ .Values.application.prefix }}')
+        - match: PathPrefix(`{{ .Values.application.prefix }}`)
           kind: Rule
           middlewares:
             - name: {{ .Values.application.name }}-strip
