--- a/charts/investager/values.yaml
+++ b/charts/investager/values.yaml
@@ -1,6 +1,7 @@
 api:
     namespace: investager
     replicaCount: 1
+    port: 3000
     application:
         prefix: /api
         name: investager-api
@@ -10,6 +11,7 @@ api:
 ui:
     namespace: investager
     replicaCount: 1
+    port: 3001
     application:
         prefix: /ui
         name: investager-ui
