what could go wrong

--- a/apps/base/investager/release.yaml
+++ b/apps/base/investager/release.yaml
@@ -17,3 +17,7 @@ spec:
     install:
         remediation:
             retries: 3
+    values:
+        api:
+            image:
+                tag: main-12345-12345 # {"$imagepolicy": "flux-system:podinfo:tag"}
