--- a/clusters/dev/flux-system-automation.yaml
+++ b/clusters/dev/flux-system-automation.yaml
@@ -11,14 +11,14 @@ spec:
     git:
         checkout:
             ref:
-                branch: main
+                branch: flux
         commit:
             author:
                 email: fluxcdbot@investager.com
                 name: fluxcdbot
             messageTemplate: "{{range .Updated.Images}}{{println .}}{{end}}"
         push:
-            branch: main
+            branch: flux
     update:
         path: ./clusters/dev
         strategy: Setters
