--- a/charts/common/frontend/templates/deployment.yaml
+++ b/charts/common/frontend/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
                 name: {{ .Values.application.name }}
         spec:
             containers:
-                - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+                - image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
                   name: app
                   imagePullPolicy: {{ .Values.image.pullPolicy }}
                   ports:
