--- a/apps/base/investager/release.yaml
+++ b/apps/base/investager/release.yaml
@@ -20,4 +20,7 @@ spec:
     values:
         api:
             image:
-                tag: sha-882949f # {"$imagepolicy": "flux-system:podinfo:tag"}
+                tag: sha-882949f # {"$imagepolicy": "flux-system:investager-api:tag"}
+        ui:
+            image:
+                tag: sha-882949f # {"$imagepolicy": "flux-system:investager-ui:tag"}
