--- a/clusters/dev/flux-system-automation.yaml
+++ b/clusters/dev/flux-system-automation.yaml
@@ -16,6 +16,9 @@ spec:
             author:
                 email: fluxcdbot@investager.com
                 name: fluxcdbot
+            signingKey:
+                secretRef:
+                    name: flux-system
             messageTemplate: "{{range .Updated.Images}}{{println .}}{{end}}"
         push:
             branch: flux
