--- a/clusters/dev/flux-system-automation.yaml
+++ b/clusters/dev/flux-system-automation.yaml
@@ -20,5 +20,5 @@ spec:
         push:
             branch: flux
     update:
-        path: ./clusters/dev
+        path: ./apps/base/investager
         strategy: Setters
