moment of truth

--- a/charts/common/flux/templates/discord-alert.yaml
+++ b/charts/common/flux/templates/discord-alert.yaml
@@ -9,6 +9,6 @@ spec:
     eventSeverity: info
     eventSources:
         - kind: GitRepository
-          name: '*'
+          name: "*"
         - kind: Kustomization
-          name: '*'
+          name: "*"
