--- a/clusters/dev/system.yaml
+++ b/clusters/dev/system.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-    name: apps
+    name: system
     namespace: flux-system
 spec:
     interval: 5m0s
     sourceRef:
         kind: GitRepository
         name: flux-system
-    path: ./apps/dev
+    path: ./system/dev
     prune: true
     wait: true
     timeout: 5m0s
