--- a/.github/workflows/staging-auto-pr.yaml
+++ b/.github/workflows/staging-auto-pr.yaml
@@ -18,3 +18,5 @@ jobs:
                   destination_branch: "main"
                   pr_title: "Pulling ${{ github.ref }} into main"
                   pr_body: "An automated PR"
+                  pr_reviewer: "tiberiu-matei"
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
