--- a/apps/prod/investager-values.yaml
+++ b/apps/prod/investager-values.yaml
@@ -9,8 +9,10 @@ spec:
       version: ">=0.0.1"
   values:
     api:
+      domain: investager.com
       image:
         tag: main-037d56b-1675890832 # {"$imagepolicy": "flux-system:investager-api:tag"}
     ui:
+      domain: investager.com
       image:
         tag: main-037d56b-1675890805 # {"$imagepolicy": "flux-system:investager-ui:tag"}
