--- a/apps/dev/kustomization.yaml
+++ b/apps/dev/kustomization.yaml
@@ -4,12 +4,5 @@ namespace: investager
 resources:
     - ../base/investager
 patchesStrategicMerge:
+    - investager-certificate.yaml
     - investager-values.yaml
----
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-namespace: monitoring
-resources:
-    - ../base/monitoring
-patchesStrategicMerge:
-    - monitoring-values.yaml
