--- a/apps/prod/kustomization.yaml
+++ b/apps/prod/kustomization.yaml
@@ -4,4 +4,5 @@ namespace: investager
 resources:
     - ../base/investager
 patchesStrategicMerge:
+    - investager-certificate.yaml
     - investager-values.yaml
