--- a/infra/cert-issuer/kustomization.yaml
+++ b/infra/cert-issuer/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system
+namespace: cert-manager
 resources:
-    - discord.yaml
+    - cert-issuer.yaml
