--- a/infra/cert-manager/dev/kustomization.yaml
+++ b/infra/cert-manager/dev/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system
+namespace: cert-manager
 resources:
-    - discord.yaml
+    - ../base
+    - secret.yaml
