--- a/system/prod/flux-values.yaml
+++ b/system/prod/flux-values.yaml
@@ -1,12 +1,8 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: notification.toolkit.fluxcd.io/v1beta2
+kind: Provider
 metadata:
-    name: flux
+    name: discord-provider
     namespace: flux-system
 spec:
-    chart:
-        spec:
-            version: ">=0.0.1"
-    values:
-        discordChannel: prod
-        discordUser: flux-prod
+    channel: prod
+    username: flux-prod
