--- a/clusters/dev/infra.yaml
+++ b/clusters/dev/infra.yaml
@@ -47,3 +47,20 @@ spec:
     prune: true
     wait: true
     timeout: 5m0s
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+    name: longhorn
+    namespace: flux-system
+spec:
+    interval: 5m0s
+    dependsOn:
+        - name: system
+    sourceRef:
+        kind: GitRepository
+        name: flux-system
+    path: ./infra/longhorn
+    prune: true
+    wait: true
+    timeout: 5m0s
