--- a/infra/cert-manager/base/cert-manager.yaml
+++ b/infra/cert-manager/base/cert-manager.yaml
@@ -11,7 +11,6 @@ metadata:
 spec:
     targetNamespace: cert-manager
     releaseName: cert-manager
-    interval: 5m
     chart:
         spec:
             chart: cert-manager
@@ -20,6 +19,7 @@ spec:
                 kind: HelmRepository
                 name: jetstack-charts
                 namespace: flux-system
+    interval: 1h0m0s
     install:
         remediation:
             retries: 3
