--- a/clusters/dev/flux-system/gotk-sync.yaml
+++ b/clusters/dev/flux-system/gotk-sync.yaml
@@ -11,7 +11,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/tiberiu-matei/ops
+  url: https://github.com/tiberiu-matei/ops.git
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
