--- a/clusters/dev/infra.yaml
+++ b/clusters/dev/infra.yaml
@@ -6,6 +6,8 @@ metadata:
     namespace: flux-system
 spec:
     interval: 5m0s
+    dependsOn:
+        - name: system
     sourceRef:
         kind: GitRepository
         name: flux-system
@@ -47,3 +49,54 @@ spec:
     prune: true
     wait: true
     timeout: 5m0s
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#     name: monitoring
+#     namespace: flux-system
+# spec:
+#     interval: 5m0s
+#     dependsOn:
+#         - name: cert-issuer
+#     sourceRef:
+#         kind: GitRepository
+#         name: flux-system
+#     path: ./infra/monitoring/dev
+#     prune: true
+#     wait: true
+#     timeout: 5m0s
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+    name: longhorn
+    namespace: flux-system
+spec:
+    interval: 5m0s
+    dependsOn:
+        - name: cert-issuer
+    sourceRef:
+        kind: GitRepository
+        name: flux-system
+    path: ./infra/longhorn/dev
+    prune: true
+    wait: true
+    timeout: 5m0s
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#     name: postgres
+#     namespace: flux-system
+# spec:
+#     interval: 5m0s
+#     dependsOn:
+#         - name: sealed-secrets
+#     sourceRef:
+#         kind: GitRepository
+#         name: flux-system
+#     path: ./infra/postgres/dev
+#     prune: true
+#     wait: true
+#     timeout: 5m0s
