--- a/system/base/bitnami/kustomization.yaml
+++ b/system/base/bitnami/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cert-manager
+namespace: flux-system
 resources:
-    - ../base
-    - cloudflare-secret.yaml
+    - bitnami.yaml
