--- a/system/base/longhorn/longhorn.yaml
+++ b/system/base/longhorn/longhorn.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-    name: jetstack-charts
+    name: longhorn
     namespace: flux-system
 spec:
     interval: 1h0m0s
-    url: https://charts.jetstack.io
+    url: https://charts.longhorn.io
