--- a/infra/longhorn/longhorn.yaml
+++ b/infra/longhorn/longhorn.yaml
@@ -18,6 +18,7 @@ spec:
             sourceRef:
                 kind: HelmRepository
                 name: longhorn-charts
+                namespace: flux-system
             version: "1.4.0"
     interval: 1h0m0s
     install:
