--- a/infra/cert-manager/base/cert-manager.yaml
+++ b/infra/cert-manager/base/cert-manager.yaml
@@ -17,7 +17,7 @@ spec:
             version: "1.10.0"
             sourceRef:
                 kind: HelmRepository
-                name: jetstack-charts
+                name: jetstack
                 namespace: flux-system
     interval: 1h0m0s
     install:
