--- a/clusters/dev/infra.yaml
+++ b/clusters/dev/infra.yaml
@@ -48,6 +48,23 @@ spec:
     wait: true
     timeout: 5m0s
 ---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+    name: monitoring
+    namespace: flux-system
+spec:
+    interval: 5m0s
+    dependsOn:
+        - name: system
+    sourceRef:
+        kind: GitRepository
+        name: flux-system
+    path: ./infra/monitoring
+    prune: true
+    wait: true
+    timeout: 5m0s
+---
 # apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 # kind: Kustomization
 # metadata:
