--- a/infra/monitoring/base/kustomization.yaml
+++ b/infra/monitoring/base/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system
+namespace: monitoring
 resources:
-    - longhorn.yaml
+    - namespace.yaml
+    - prometheus-release.yaml
