--- a/system/base/prometheus-community/prometheus-community.yaml
+++ b/system/base/prometheus-community/prometheus-community.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-    name: longhorn-charts
+    name: prometheus-community
     namespace: flux-system
 spec:
     interval: 1h0m0s
-    url: https://charts.longhorn.io
+    url: https://prometheus-community.github.io/helm-charts
