--- a/system/prod/kustomization.yaml
+++ b/system/prod/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
     - ../base/flux
     - ../base/jetstack
     - ../base/longhorn
+    - ../base/prometheus-community
 patchesStrategicMerge:
     - flux-values.yaml
