--- a/infra/monitoring/base/kustomization.yaml
+++ b/infra/monitoring/base/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 resources:
+    - certificate.yaml
+    - grafana-ingress.yaml
     - namespace.yaml
     - prometheus-release.yaml
