--- a/infra/monitoring/dev/grafana-certificate.yaml
+++ b/infra/monitoring/dev/grafana-certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-    name: grafana
+    name: grafana-cert
     namespace: monitoring
 spec:
     commonName: "grafana.local.investager.com"
