idk what I'm doing

--- a/infra/monitoring/prod/grafana-certificate.yaml
+++ b/infra/monitoring/prod/grafana-certificate.yaml
@@ -4,6 +4,10 @@ metadata:
     name: grafana-cert
     namespace: monitoring
 spec:
+    secretName: grafana-tls
+    issuerRef:
+        name: letsencrypt
+        kind: ClusterIssuer
     commonName: "grafana.investager.com"
     dnsNames:
         - "grafana.investager.com"
