remove buggy stuff

--- a/infra/monitoring/base/prometheus-release.yaml
+++ b/infra/monitoring/base/prometheus-release.yaml
@@ -33,6 +33,8 @@ spec:
                 existingSecret: grafana
                 userKey: username
                 passwordKey: password
+        nodeExporter:
+            enabled: false
         prometheus:
             enabled: true
             prometheusSpec:
