--- a/infra/longhorn/longhorn.yaml
+++ b/infra/longhorn/longhorn.yaml
@@ -24,6 +24,7 @@ spec:
     values:
         defaultSettings:
             deletingConfirmationFlag: true
+        deletingConfirmationFlag: true
         longhornUI:
             replicas: 1
         longhornConversionWebhook:
