--- a/infra/longhorn/base/longhorn-release.yaml
+++ b/infra/longhorn/base/longhorn-release.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: longhorn-system
+    name: longhorn
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
     name: longhorn
-    namespace: longhorn-system
+    namespace: longhorn
 spec:
-    targetNamespace: longhorn-system
+    targetNamespace: longhorn
     releaseName: longhorn
     chart:
         spec:
@@ -24,7 +24,6 @@ spec:
     values:
         defaultSettings:
             deletingConfirmationFlag: "true"
-        # deletingConfirmationFlag: "true"
         longhornUI:
             replicas: 1
         longhornConversionWebhook:
@@ -35,6 +34,8 @@ spec:
             replicas: 1
         ingress:
             enabled: false
+        persistence:
+            defaultClassReplicaCount: 1
     install:
         crds: CreateReplace
         disableWait: true
