--- a/infra/longhorn/base/longhorn-release.yaml
+++ b/infra/longhorn/base/longhorn-release.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: longhorn
+    name: longhorn-system
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
     name: longhorn
-    namespace: longhorn
+    namespace: longhorn-system
 spec:
-    targetNamespace: longhorn
+    targetNamespace: longhorn-system
     releaseName: longhorn
     chart:
         spec:
