--- a/infra/longhorn/prod/longhorn-cert.yaml
+++ b/infra/longhorn/prod/longhorn-cert.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
     name: longhorn-cert
-    namespace: longhorn
+    namespace: longhorn-system
 spec:
     secretName: longhorn-tls
     issuerRef:
