--- a/clusters/dev/infra.yaml
+++ b/clusters/dev/infra.yaml
@@ -83,20 +83,20 @@ spec:
     prune: true
     wait: true
     timeout: 5m0s
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-# kind: Kustomization
-# metadata:
-#     name: postgres
-#     namespace: flux-system
-# spec:
-#     interval: 5m0s
-#     dependsOn:
-#         - name: sealed-secrets
-#     sourceRef:
-#         kind: GitRepository
-#         name: flux-system
-#     path: ./infra/postgres/dev
-#     prune: true
-#     wait: true
-#     timeout: 5m0s
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+    name: postgres
+    namespace: flux-system
+spec:
+    interval: 5m0s
+    dependsOn:
+        - name: longhorn
+    sourceRef:
+        kind: GitRepository
+        name: flux-system
+    path: ./infra/postgres/dev
+    prune: true
+    wait: true
+    timeout: 5m0s
