--- a/infra/postgres/base/postgres.yaml
+++ b/infra/postgres/base/postgres.yaml
@@ -1,3 +1,9 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: postgres
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -9,56 +15,21 @@ spec:
     chart:
         spec:
             chart: kube-prometheus-stack
-            version: "45.0.0"
+            version: "12.2.1"
             sourceRef:
                 kind: HelmRepository
-                name: prometheus-community
+                name: bitnami
                 namespace: flux-system
     interval: 1h0m0s
     install:
         remediation:
             retries: 3
     values:
-        fullnameOverride: prometheus
-        alertmanager:
-            fullnameOverride: alertmanager
-            enabled: true
-            ingress:
-                enabled: false
-        grafana:
-            fullnameOverride: grafana
-            serviceMonitor:
-                enabled: true
-            admin:
-                existingSecret: grafana
-                userKey: username
-                passwordKey: password
-        nodeExporter:
-            enabled: false
-        prometheus:
-            enabled: true
-            prometheusSpec:
-                replicas: 1
-                replicaExternalLabelName: "replica"
-                ruleSelectorNilUsesHelmValues: false
-                serviceMonitorSelectorNilUsesHelmValues: false
-                podMonitorSelectorNilUsesHelmValues: false
-                probeSelectorNilUsesHelmValues: false
-                retention: 48h
-                enableAdminAPI: true
-                walCompression: true
-                storageSpec:
-                    volumeClaimTemplate:
-                        spec:
-                            storageClassName: local-path
-                            accessModes:
-                                [
-                                    "ReadWriteOnce",
-                                ]
-                            resources:
-                                requests:
-                                    storage: 10Gi
-        prometheus-node-exporter:
-            fullnameOverride: node-exporter
-        thanosRuler:
-            enabled: false
+        global:
+            storageClass: longhorn
+        # auth:
+        #     existingSecret: postgres
+        #   secretKeys:
+        #       adminPasswordKey: admin
+        #       userPasswordKey: user
+        architecture: standalone
