--- a/infra/postgres/base/postgres.yaml
+++ b/infra/postgres/base/postgres.yaml
@@ -14,7 +14,7 @@ spec:
     releaseName: postgres
     chart:
         spec:
-            chart: kube-prometheus-stack
+            chart: postgresql
             version: "12.2.1"
             sourceRef:
                 kind: HelmRepository
