longhorn ui only in dev

--- a/infra/longhorn/dev/kustomization.yaml
+++ b/infra/longhorn/dev/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
     - ../base
     - longhorn-secret.yaml
     - longhorn-cert.yaml
-patchesStrategicMerge:
+    - longhorn-auth.yaml
     - longhorn-ingress.yaml
