--- a/charts/common/frontend/templates/ingress-http.yaml
+++ b/charts/common/frontend/templates/ingress-http.yaml
@@ -7,7 +7,7 @@ spec:
     entryPoints:
         - web
     routes:
-        - match: Host(`{{ .Values.domain }}`) && PathPrefix(`{{ .Values.application.prefix }}`)
+        - match: Host(`{{ .Values.domain }}`)
           kind: Rule
           middlewares:
               - name: {{ .Values.application.name }}-redirect
