--- a/clusters/prod/apps.yaml
+++ b/clusters/prod/apps.yaml
@@ -1,16 +1,16 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-kind: Kustomization
-metadata:
-    name: apps
-    namespace: flux-system
-spec:
-    interval: 5m0s
-    dependsOn:
-        - name: cert-issuer
-    sourceRef:
-        kind: GitRepository
-        name: flux-system
-    path: ./apps/prod
-    prune: true
-    wait: true
-    timeout: 5m0s
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#     name: apps
+#     namespace: flux-system
+# spec:
+#     interval: 5m0s
+#     dependsOn:
+#         - name: cert-issuer
+#     sourceRef:
+#         kind: GitRepository
+#         name: flux-system
+#     path: ./apps/prod
+#     prune: true
+#     wait: true
+#     timeout: 5m0s
